--- a/pack.toml
+++ b/pack.toml
@@ -1,5 +1,5 @@
 name = "corporate-hell"
-author = "Ciiina, Wawwior"
+author = "@Ciiina, @wawwior"
 version = "1.0.0"
 pack-format = "packwiz:1.1.0"
 
